src/golden/functions/errors/test.golden/nosemis.fl
Semicolons do not terminate lines in FLAS, no matter how much your muscle memory makes you type them

	nosemis q = q * q;